@@ -37,7 +37,7 @@ v15.0.00
 		System: fixed missing form validation for dropdowns created with User Custom Fields
 		Attendance: fixed GROUP BY issue in moduleFunctions.php when MySQL is using only_full_group_by
 		Attendance: adjusted attendance checking CLI script to only include lessons whose start time has already passed
-		Attendance: show staff dashboard link to attendance only if user has access to Form Group attendance 
+		Attendance: show staff dashboard link to attendance only if user has access to Form Group attendance
 		Behaviour: fixed typo in three settings
 		Departments: fixed bug preventing students from seeing other students in a class
 		Finance: set name of outgoing email to school name, not user's name
@@ -51,6 +51,7 @@ v15.0.00
 		Timetable Admin: added link from course view in Manage Courses & Classes to edit class enrolment
 		Timetable Admin: updated Course Enrolment Rollover to prevent duplicates and not copy users set to Left
 		User Admin: improved usability of feedback in Step 3 of the rollover
+		User Admin: made Pending Approval option in Status in edit User appear only if Public Registration is enabled
 
 v14.0.00
 --------
